--- a/src/Resources/views/storefront/narrative/element/cms-element-product-slider.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-product-slider.html.twig
@@ -48,22 +48,26 @@ all JSON schema properties are returned in an array, so if a single value is exp
                                             displayMode
                                             product
                                         #}
-                                        {% if bxblock.product.id %}
-                                            {% set narrativeContent = {
-                                                'block' : bxblock,
-                                                'layout': block.layout[0],
-                                                'displayMode': block.displayMode[0],
-                                                'product': block.model.getItem(bxblock.product.products_group_id[0]),
-                                                'listingColumns' : listingColumns
-                                            } %}
+                                        {% set narrativeContent ={
+                                            'block' : bxblock,
+                                            'layout': block.layout[0],
+                                            'displayMode': block.displayMode[0],
+                                            'listingColumns' : listingColumns
+                                        } %}
+                                        {% set productByGroupId = block.model.getItem(bxblock.product.products_group_id[0]) %}
+                                        {% if product %}
+                                            {% set narrativeContent = narrativeContent|merge({ 'product': productByGroupId }) %}
                                             {% sw_include bxblock.template with narrativeContent %}
                                         {% else %}
-                                            {#
-                                                in case the content in the listing is not only product
-                                                but some other type (custom)
-                                            #}
-                                            {% set narrativeContent = {'block' : bxblock } %}
-                                            {% sw_include bxblock.template with narrativeContent %}
+                                            {% set productById = block.model.getItemById(bxblock.product.id) %}
+                                            {% if productById %}
+                                                {% set narrativeContent = narrativeContent|merge({ 'product': productById }) %}
+                                                {% sw_include bxblock.template with narrativeContent %}
+                                            {% else %}
+                                                {# in case the content in the listing is not only product but some other type (custom) #}
+                                                {% set narrativeContent = {'block' : bxblock } %}
+                                                {% sw_include bxblock.template with narrativeContent %}
+                                            {% endif %}
                                         {% endif %}
                                     </div>
                                 {% endblock %}
