--- a/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
@@ -65,7 +65,7 @@ renders the facets as are set in the facet model
                                                         } %}
                                                     {% endif %}
 
-                                                    {% if facet.visualisation == 'multiselect' %}
+                                                    {% if facet.visualisation == 'multiselect' or facet.visualisation is empty %}
                                                         {% sw_include '@BoxalinoRealTimeUserExperienceIntegration/storefront/narrative/component/listing/filter/filter-multiselect.html.twig' with {
                                                             facet: facet,
                                                             sidebar: sidebar,
