--- a/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter-panel.html.twig
@@ -118,38 +118,34 @@ renders the facets as are set in the facet model
                                             {# the button based on the template of listing.plugin..js::getLabelTemplate() #}
                                             {% for selectedFacet in block.model.getSelectedFacets() %}
                                                 {% for selectedValue in selectedFacet.getSelectedValues() %}
-                                                    {% if (selectedValue.minSelectedValue is not null) and (selectedValue.minSelectedValue != "0") %}
-                                                        {% if selectedFacet.visualisation == 'stars' %}
-                                                            <span class="filter-active">
-                                                                {{ selectedFacet.label }} {{ 'listing.filterRatingActiveLabelStart'|trans|lower|sw_sanitize }} {{ selectedValue.minSelectedValue }}
-                                                                <button class="filter-active-remove" data-id="{{ selectedFacet.field }}">&times;</button>
-                                                            </span>
-                                                        {% else %}
-                                                            <span class="filter-active">
-                                                                {{ selectedFacet.label }} {{ 'listing.filterRangeActiveMinLabel'|trans|sw_sanitize }} {{ selectedValue.minSelectedValue }}
-                                                                <button class="filter-active-remove" data-id="{{ selectedFacet.rangeFromField }}">&times;</button>
-                                                            </span>
-                                                        {% endif %}
-                                                    {% endif %}
-                                                    {% if selectedValue.maxSelectedValue is not null %}
+                                                    {% if selectedFacet.visualisation is same as ('switch') %}
                                                         <span class="filter-active">
-                                                            {{ selectedFacet.label }} {{ 'listing.filterRangeActiveMaxLabel'|trans|sw_sanitize }} {{ selectedValue.maxSelectedValue }}
-                                                            <button class="filter-active-remove" data-id="{{ selectedFacet.rangeToField }}">&times;</button>
-                                                        </span>
-                                                    {% endif %}
-                                                    {% if selectedValue.value is not null %}
-                                                        {# for boolean fields - the label of the field to be displayed #}
-                                                        {% if selectedFacet.visualisation == 'switch' %}
-                                                            <span class="filter-active">
                                                             {{ selectedFacet.label }}
                                                             <button class="filter-active-remove" data-id="{{ selectedFacet.field }}">&times;</button>
                                                         </span>
-                                                            {% else %}
+                                                    {% elseif selectedFacet.visualisation is same as ('stars') %}
+                                                        <span class="filter-active">
+                                                            {{ selectedFacet.label }} {{ 'listing.filterRatingActiveLabelStart'|trans|lower|sw_sanitize }} {{ selectedValue.minSelectedValue }}
+                                                            <button class="filter-active-remove" data-id="{{ selectedFacet.field }}">&times;</button>
+                                                        </span>
+                                                    {% elseif selectedFacet.visualisation is same as ('range') %}
+                                                        {% if (selectedValue.minSelectedValue is not null) and (selectedValue.minSelectedValue != "0") %}
+                                                            <span class="filter-active">
+                                                                {{ 'listing.filterRangeActiveMinLabel'|trans|sw_sanitize }} {{ (0.0 + selectedValue.minSelectedValue)|currency }}
+                                                                <button class="filter-active-remove" data-id="{{ selectedFacet.rangeFromField }}">&times;</button>
+                                                            </span>
+                                                        {% endif %}
+                                                        {% if selectedValue.maxSelectedValue is not null %}
+                                                            <span class="filter-active">
+                                                                {{ 'listing.filterRangeActiveMaxLabel'|trans|sw_sanitize }} {{ (0.0 + selectedValue.maxSelectedValue)|currency }}
+                                                                <button class="filter-active-remove" data-id="{{ selectedFacet.rangeToField }}">&times;</button>
+                                                            </span>
+                                                        {% endif %}
+                                                    {% else %}
                                                         <span class="filter-active">
                                                             {{ selectedValue.value }}
-                                                            <button class="filter-active-remove" data-id="{{ selectedFacet.field }}_{{ selectedValue.value }}">&times;</button>
+                                                            <button class="filter-active-remove" data-id="{{ selectedValue.value }}">&times;</button>
                                                         </span>
-                                                            {% endif %}
                                                     {% endif %}
                                                 {% endfor %}
                                             {% endfor %}
