--- a/src/Resources/views/storefront/narrative/component/listing/filter/filter-range.html.twig
+++ b/src/Resources/views/storefront/narrative/component/listing/filter/filter-range.html.twig
@@ -13,6 +13,11 @@
     {% set filterRangeActiveMaxLabel = 'listing.filterRangeActiveMaxLabel'|trans|sw_sanitize %}
 {% endif %}
 
+{% set minValue = value.minValue %}
+{% set maxValue = value.maxValue %}
+
+{% set expanded = facet.selected or facet.display is same as ('expanded') %}
+
 {% if value.hitCount > 1 %}
     {% block component_filter_range %}
         <div class="filter-range filter-panel-item{% if not sidebar %} dropdown{% endif %}"
@@ -31,7 +36,7 @@
 
             {% block component_filter_range_toggle %}
                 <button class="filter-panel-item-toggle btn{% if sidebar %} btn-block{% endif %}"
-                        aria-expanded="false"
+                        aria-expanded="{{ expanded|json_encode }}"
                     {% if sidebar %}
                     data-toggle="collapse"
                     data-target="#{{ filterItemId }}"
@@ -52,7 +57,15 @@
             {% endblock %}
 
             {% block component_filter_range_dropdown %}
-                <div class="filter-range-dropdown filter-panel-item-dropdown{% if sidebar %} collapse{% else %} dropdown-menu{% endif %}"
+                {% if sidebar %}
+                    {% set classes = 'collapse' %}
+                    {% if expanded %}
+                        {% set classes = classes ~ ' show' %}
+                    {% endif %}
+                {% else %}
+                    {% set classes = 'dropdown-menu' %}
+                {% endif %}
+                <div class="filter-range-dropdown filter-panel-item-dropdown {{ classes }}"
                      id="{{ filterItemId }}">
 
                     {% block component_filter_range_container %}
@@ -72,7 +85,7 @@
                                                min="{{ value.minValue }}"
                                                max="{{ value.maxValue}}"
                                             {% if value.minSelectedValue is not null %} value="{{ value.minSelectedValue }}" {% endif %}
-                                               placeholder="{{ value.minValue }}">
+                                               placeholder="{{ minValue|number_format(page.header.activeCurrency.decimalPrecision) }}">
                                     {% endblock %}
 
                                     {% block component_filter_range_min_currency_symbol %}
@@ -103,7 +116,7 @@
                                                min="{{ value.minValue}}"
                                                max="{{ value.maxValue}}"
                                             {% if value.maxSelectedValue is not null %} value="{{ value.maxSelectedValue }}" {% endif %}
-                                               placeholder="{{ value.maxValue }}">
+                                               placeholder="{{ maxValue|number_format(page.header.activeCurrency.decimalPrecision) }}">
                                     {% endblock %}
 
                                     {% block component_filter_range_max_currency_symbol %}
