--- a/src/Resources/views/storefront/narrative/element/cms-element-sidebar-filter.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-sidebar-filter.html.twig
@@ -31,14 +31,19 @@ If you wish the default Shopware6 facets feature (facets to be constant) - use d
     {% set params = {slots: element.id} %}
 {% endif %}
 
+{% if currencySymbol is not defined %}
+    {% set currencySymbol = page.getCurrency() is defined ? page.getCurrency() : page.header.activeCurrency.translated.shortName %}
+{% endif %}
+
 {% block element_filter_listing_wrapper %}
     <div class="cms-element-product-listing-wrapper"
          data-listing="true"
          data-listing-options='{
-             "sidebar": "{{ sidebar|json_encode }}",
+             "sidebar": "true",
              "dataUrl": "{{ dataUrl }}",
              "params": {{ params|json_encode }},
              "filterUrl": "{{ filterUrl }}",
+             "currency": "{{ currencySymbol }}",
              "snippets": {
                 "resetAllButtonText": "{{ 'listing.filterPanelResetAll'|trans|sw_sanitize }}"
              }
@@ -47,7 +52,7 @@ If you wish the default Shopware6 facets feature (facets to be constant) - use d
         {% block element_product_listing_wrapper_content %}
             <div class="cms-element-product-listing">
                 {% for bxblock in block.blocks %}
-                    {% set narrativeContent = {'block' : bxblock, 'sidebar': sidebar} %}
+                    {% set narrativeContent = {'block' : bxblock, 'sidebar': sidebar, 'currencySymbol': currencySymbol} %}
                     {% sw_include bxblock.template with narrativeContent %}
                 {% endfor %}
             </div>
