[di]declare custom properties as indexed; [suggest] product link

--- a/src/Resources/views/storefront/narrative/layout/header/suggest/product-item.html.twig
+++ b/src/Resources/views/storefront/narrative/layout/header/suggest/product-item.html.twig
@@ -1,6 +1,6 @@
 <li class="search-suggest-product js-result">
     {% block layout_search_suggest_result_link %}
-        <a href="{{ block.product.link[0] }}"
+        <a href="/{{ block.product.link[0] }}"
            title="{{ block.product.title }}"
            class="search-suggest-product-link">
             <div class="row align-items-center no-gutters bx-narrative-item" data-bx-item-id="{{ block.product.id }}">
