--- a/src/Resources/views/storefront/narrative/component/product/listing.html.twig
+++ b/src/Resources/views/storefront/narrative/component/product/listing.html.twig
@@ -4,7 +4,7 @@
 the product-listing-row segment of the original Shopware6 theme file
 (@Storefront/storefront/component/product/listing.html.twig)
 
-block.model.getItem(id) : uses the block model (ex: Boxalino\RealTimeUserExperience\Framework\Content\Listing\ApiEntityCollectionModel)
+block.getModel().getItem(id) : uses the block model (ex: Boxalino\RealTimeUserExperience\Framework\Content\Listing\ApiEntityCollectionModel)
 to set a product entity from the collection of products (as returned by the Boxalino response)
 the child block (of type product) is being rendered with minimum changes
 
@@ -30,12 +30,12 @@ optional: use the JSON SCHEMA of the product layout block to set other params (l
             product
             listingColumns
             #}
-            {% if bxblock.product.id %}
+            {% if bxblock.bxHit.id %}
                 {% set narrativeContent = {
                     'block' : bxblock,
                     'layout': bxblock.layout[0],
                     'displayMode': bxblock.displayMode[0],
-                    'product':block.model.getItem(bxblock.product.products_group_id[0]),
+                    'product':block.getModel().getItem(bxblock.bxHit.products_group_id[0]),
                     'listingColumns' : listingColumns
                 } %}
                 {% sw_include bxblock.template with narrativeContent %}
