--- a/src/Resources/views/storefront/narrative/layout/header/suggest/suggestion-list.html.twig
+++ b/src/Resources/views/storefront/narrative/layout/header/suggest/suggestion-list.html.twig
@@ -1,7 +1,7 @@
 {% block layout_search_suggest_suggestion %}
     {% block layout_search_suggest_container %}
         {% for bxblock in block.blocks %}
-            {% if bxblock.suggestion %}
+            {% if bxblock.bxAcQuery %}
                 {% block layout_search_suggest_result_suggestion %}
                     {% set narrativeContent = {'block' : bxblock } %}
                     {% sw_include bxblock.template with narrativeContent %}
