--- a/src/Resources/views/storefront/narrative/component/product/listing-by-api.html.twig
+++ b/src/Resources/views/storefront/narrative/component/product/listing-by-api.html.twig
@@ -4,7 +4,7 @@
 the product-listing-row segment of the original Shopware6 theme file
 (@Storefront/storefront/component/product/listing.html.twig)
 
-block.model.getItem(id) : uses the block model (ex: Boxalino\RealTimeUserExperience\Framework\Content\Listing\ApiEntityCollectionModel)
+block.getModel().getItem(id) : uses the block model (ex: Boxalino\RealTimeUserExperience\Framework\Content\Listing\ApiEntityCollectionModel)
 to set a product entity from the collection of products (as returned by the Boxalino response)
 the child block (of type product) is being rendered with minimum changes
 
